--- a/package.json
+++ b/package.json
@@ -3,28 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/error-message": "^2.0.0",
-    "@hookform/resolvers": "^2.5.1",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
-    "date-fns": "^2.22.1",
-    "material-ui-image": "^3.3.2",
-    "node-sass": "4.14.1",
-    "query-string": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.26.0",
+    "boxicons": "^2.1.1",
+    "dateformat": "^5.0.3",
+    "postcss": "^8.4.7",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.6.3",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
+    "tailwindcss": "^3.0.23",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
