--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "name": "reactjs-movies-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/plugin-syntax-flow": "^7.16.7",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@testing-library/dom": "^8.11.3",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.2",
-    "axios": "^0.26.0",
-    "boxicons": "^2.1.1",
-    "dateformat": "^5.0.3",
-    "history": "^5.3.0",
-    "postcss": "^8.4.7",
-    "query-string": "^7.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "react-toastify": "^8.2.0",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "reactjs-movies-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/plugin-syntax-flow": "^7.16.7",
+        "@babel/plugin-transform-react-jsx": "^7.17.3",
+        "@testing-library/dom": "^8.11.3",
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.3",
+        "@testing-library/user-event": "^13.5.0",
+        "autoprefixer": "^10.4.2",
+        "axios": "^0.26.0",
+        "boxicons": "^2.1.1",
+        "dateformat": "^5.0.3",
+        "history": "^5.3.0",
+        "postcss": "^8.4.7",
+        "query-string": "^7.1.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router": "^6.2.2",
+        "react-router-dom": "^6.2.2",
+        "react-scripts": "5.0.0",
+        "react-toastify": "^8.2.0",
+        "tailwindcss": "^3.0.23",
+        "typescript": "^4.6.2",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "CI=false && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
